--- a/css/styles.css
+++ b/css/styles.css
@@ -1,35 +1,51 @@
 * {
-    background-color: rgb(224, 222, 222);
+    background-color: rgb(225, 225, 225);
     color: rgb(31, 31, 31);
     font-family: 'Roboto Mono', monospace;
     font-weight: 400;
     text-align: center;
 }
 
-
 h1 {
     font-weight: 700;
+    text-shadow: .75px .75px 1.5px rgb(104, 34, 104);
 }
 
 #textbox {
-    background-color: rgb(243, 243, 243);
-    width: 98%;
+    background-color: rgb(250, 250, 250);
+    width: 85%;
     height: 100px;
+    margin: 1em auto 2em;
     font-size: 1em;
     border-width: 2px;
+    border-color: rgb(31, 31, 31);
+    box-shadow: .5px .5px rgb(104, 34, 104);
     border-radius: 5px;
     text-align: left;
     resize: none;
 }
 
 .buttons {
+    color: rgb(31, 31, 31);
+    background-color: rgb(190, 190, 190);
     width: 200px;
     height: 50px;
     font-size: 1em;
+    text-shadow: .5px .5px 1px rgb(104, 34, 104);
     font-weight: 700;
+    border-color: rgb(31, 31, 31);
+    box-shadow: 1.5px 1.5px rgb(104, 34, 104);
     border-radius: 5px;
+}
+
+.buttons:active {
+    color: rgb(104, 34, 104);
+    text-shadow: .5px .5px 1px rgb(31, 31, 31);
+    transform: translate(1px);
+    box-shadow: 1.5px 1.5px rgb(173, 111, 173);
 }
 
 footer {
     justify-items: center;
+    text-shadow: .5px .5px 1px rgb(104, 34, 104);
 }
