--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
-* {
+body {
+    display: flex;
+    flex-direction: column;
     background-color: rgb(225, 225, 225);
     color: rgb(31, 31, 31);
     font-family: 'Roboto Mono', monospace;
@@ -25,17 +27,24 @@ h1 {
     resize: none;
 }
 
+.button-area {
+    display: flex;
+    justify-content: center;
+    gap: 5%;
+}
+
 .buttons {
-    color: rgb(31, 31, 31);
     background-color: rgb(190, 190, 190);
+    color: rgb(31, 31, 31);
     width: 200px;
     height: 50px;
     font-size: 1em;
-    text-shadow: .5px .5px 1px rgb(104, 34, 104);
     font-weight: 700;
+    text-shadow: .5px .5px 1px rgb(104, 34, 104);
     border-color: rgb(31, 31, 31);
     box-shadow: 1.5px 1.5px rgb(104, 34, 104);
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .buttons:active {
@@ -46,6 +55,7 @@ h1 {
 }
 
 footer {
+    margin-top: 2em;
     justify-items: center;
     text-shadow: .5px .5px 1px rgb(104, 34, 104);
 }
