--- a/css/styles.css
+++ b/css/styles.css
@@ -17,9 +17,9 @@ h1 {
 #textbox {
     background-color: rgb(250, 250, 250);
     width: 85%;
-    height: 100px;
-    margin: 1em auto 2em;
-    font-size: 1em;
+    height: 150px;
+    margin: 1em auto 1em;
+    font-size: 1.25em;
     border-width: 2px;
     border-color: rgb(31, 31, 31);
     box-shadow: .5px .5px rgb(104, 34, 104);
@@ -39,7 +39,7 @@ h1 {
     color: rgb(31, 31, 31);
     width: 125px;
     height: 40px;
-    font-size: .75em;
+    font-size: .8em;
     font-weight: 400;
     text-shadow: .4px .4px .75px rgb(104, 34, 104);
     border-color: rgb(31, 31, 31);
@@ -65,27 +65,32 @@ footer {
 /*tablet and above query*/
 @media only screen and (min-width: 768px) {
 
-h1 {
-    font-size: 2em;
-}
+    h1 {
+        font-size: 2em;
+    }
 
-.buttons {
-    width: 200px;
-    height: 50px;
-    font-size: 1em;
-    font-weight: 700;
-    text-shadow: .5px .5px 1px rgb(104, 34, 104);
-    box-shadow: 1.5px 1.5px rgb(104, 34, 104);
-}
+    #textbox {
+        height: 125px;
+        margin: 1em auto 1.5em;
+    }
 
-.buttons:active {
-    text-shadow: .5px .5px 1px rgb(31, 31, 31);
-    box-shadow: 1.5px 1.5px rgb(173, 111, 173);
-}
+    .buttons {
+        width: 200px;
+        height: 50px;
+        font-size: 1.10em;
+        font-weight: 700;
+        text-shadow: .5px .5px 1px rgb(104, 34, 104);
+        box-shadow: 1.5px 1.5px rgb(104, 34, 104);
+    }
 
-footer {
-    margin-top: 2em;
-    font-size: 1em;
-}
+    .buttons:active {
+        text-shadow: .5px .5px 1px rgb(31, 31, 31);
+        box-shadow: 1.5px 1.5px rgb(173, 111, 173);
+    }
+
+    footer {
+        margin-top: 2em;
+        font-size: 1em;
+    }
 
 }
