--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ main {
 #textbox {
     background-color: rgb(250, 250, 250);
     width: 85%;
-    height: 150px;
+    height: 200px;
     margin: 1em auto 1em;
     font-size: 1.25em;
     border-width: 2px;
@@ -68,27 +68,78 @@ main {
     width: fit-content;
     justify-content: center;
     padding: .25em .5em;
-    margin-top: .5em;
+    margin: .5em auto;
     font-size: .75em;
     border-radius: 5px;
     visibility: hidden;
 }
 
-footer {
-    margin-top: 1.5em;
+.about {
+    text-align: left;
+    text-indent: 2%;
+    margin: auto 5%;
     font-size: .75em;
     text-shadow: .5px .5px 1px rgb(104, 34, 104);
 }
 
-/*tablet and above query*/
+footer {
+    margin-top: 1em;
+    font-size: .75em;
+    text-shadow: .5px .5px 1px rgb(104, 34, 104);
+}
+
+/*tablet query*/
 @media only screen and (min-width: 768px) {
+
+    h1 {
+        font-size: 1.75em;
+    }
+
+    #textbox {
+        height: 225px;
+        margin: 1em auto 1.25em;
+    }
+
+    .buttons {
+        width: 160px;
+        height: 45px;
+        font-size: .9em;
+        font-weight: 700;
+        text-shadow: .5px .5px 1px rgb(104, 34, 104);
+        box-shadow: 1.5px 1.5px rgb(104, 34, 104);
+    }
+
+    .buttons:active {
+        text-shadow: .5px .5px 1px rgb(31, 31, 31);
+        box-shadow: 1.5px 1.5px rgb(173, 111, 173);
+    }
+
+    #copied-notice {
+        padding: .3em .55em;
+        margin: .75em auto;
+        font-size: .85em;
+    }
+
+    .about {
+        font-size: .85em;
+    }
+
+    footer {
+        margin-top: 1.25em;
+        font-size: .85em;
+    }
+
+}
+
+/*desktop query*/
+@media only screen and (min-width: 992px) {
 
     h1 {
         font-size: 2em;
     }
 
     #textbox {
-        height: 125px;
+        height: 250px;
         margin: 1em auto 1.5em;
     }
 
@@ -108,13 +159,17 @@ footer {
 
     #copied-notice {
         padding: .35em .6em;
-        margin-top: 1em;
+        margin: 1em auto;
+        font-size: 1em;
+    }
+
+    .about {
         font-size: 1em;
     }
 
     footer {
-        margin-top: 2em;
         font-size: 1em;
     }
+
 
 }
