--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ main {
 
 #textbox {
     background-color: rgb(250, 250, 250);
+    color: rgb(77, 25, 77);
     width: 85%;
     height: 200px;
     margin: 1em auto 1em;
@@ -115,6 +116,7 @@ footer {
     #textbox {
         height: 225px;
         margin: 1em auto 1.25em;
+        font-size: 1.35em;
     }
 
     .buttons {
@@ -158,6 +160,7 @@ footer {
     #textbox {
         height: 250px;
         margin: 1em auto 1.5em;
+        font-size: 1.5em;
     }
 
     .buttons {
