--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@ main {
 .buttons {
     background-color: rgb(190, 190, 190);
     color: rgb(31, 31, 31);
-    width: 125px;
+    width: 100px;
     height: 40px;
     font-size: .8em;
     font-weight: 400;
@@ -128,6 +128,12 @@ a {
     width: 3.25em;
     height: 3.25em;
     padding: 1px;
+}
+
+/*slight adjustment for larger phones*/
+@media only screen and (min-width: 415px) {
+.buttons {
+    width: 125px;
 }
 
 /*tablet query*/
