--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,12 @@ main {
     text-shadow: .5px .5px 1px rgb(104, 34, 104);
 }
 
+#update {
+    font-size: .85em;
+    color: rgb(104, 34, 104);
+    text-shadow: .5px .5px 1px rgb(148, 241, 241);
+}
+
 footer {
     display: flex;
     flex-direction: column;
@@ -132,102 +138,110 @@ a {
 
 /*slight adjustment for larger phones*/
 @media only screen and (min-width: 415px) {
-.buttons {
-    width: 125px;
-}
-
-/*tablet query*/
-@media only screen and (min-width: 768px) {
-
-    h1 {
-        font-size: 1.75em;
-    }
-
-    #textbox {
-        height: 225px;
-        margin: 1em auto 1.25em;
-        font-size: 1.35em;
-    }
-
     .buttons {
-        width: 160px;
-        height: 45px;
-        font-size: .9em;
-        font-weight: 700;
-        text-shadow: .5px .5px 1px rgb(104, 34, 104);
-        box-shadow: 1.5px 1.5px rgb(104, 34, 104);
+        width: 125px;
     }
 
-    .buttons:active {
-        text-shadow: .5px .5px 1px rgb(31, 31, 31);
-        box-shadow: 1.5px 1.5px rgb(173, 111, 173);
+    /*tablet query*/
+    @media only screen and (min-width: 768px) {
+
+        h1 {
+            font-size: 1.75em;
+        }
+
+        #textbox {
+            height: 225px;
+            margin: 1em auto 1.25em;
+            font-size: 1.35em;
+        }
+
+        .buttons {
+            width: 160px;
+            height: 45px;
+            font-size: .9em;
+            font-weight: 700;
+            text-shadow: .5px .5px 1px rgb(104, 34, 104);
+            box-shadow: 1.5px 1.5px rgb(104, 34, 104);
+        }
+
+        .buttons:active {
+            text-shadow: .5px .5px 1px rgb(31, 31, 31);
+            box-shadow: 1.5px 1.5px rgb(173, 111, 173);
+        }
+
+        #copied-notice {
+            padding: .3em .55em;
+            margin: .75em auto;
+            font-size: .85em;
+        }
+
+        .about {
+            font-size: .85em;
+        }
+
+        #update {
+            font-size: .95em;
+        }
+
+        footer {
+            flex-direction: row;
+            margin-top: 1.25em;
+            font-size: .9em;
+        }
+
+        .profile-pic {
+            width: 3.5em;
+            height: 3.5em;
+        }
     }
 
-    #copied-notice {
-        padding: .3em .55em;
-        margin: .75em auto;
-        font-size: .85em;
-    }
+    /*desktop query*/
+    @media only screen and (min-width: 992px) {
 
-    .about {
-        font-size: .85em;
-    }
+        h1 {
+            font-size: 2em;
+        }
 
-    footer {
-        flex-direction: row;
-        margin-top: 1.25em;
-        font-size: .9em;
-    }
+        #textbox {
+            height: 250px;
+            margin: 1em auto 1.5em;
+            font-size: 1.5em;
+        }
 
-    .profile-pic {
-        width: 3.5em;
-        height: 3.5em;
-    }
-}
+        .buttons {
+            width: 200px;
+            height: 50px;
+            font-size: 1.10em;
+            font-weight: 700;
+            text-shadow: .5px .5px 1px rgb(104, 34, 104);
+            box-shadow: 1.5px 1.5px rgb(104, 34, 104);
+        }
 
-/*desktop query*/
-@media only screen and (min-width: 992px) {
+        .buttons:active {
+            text-shadow: .5px .5px 1px rgb(31, 31, 31);
+            box-shadow: 1.5px 1.5px rgb(173, 111, 173);
+        }
 
-    h1 {
-        font-size: 2em;
-    }
+        #copied-notice {
+            padding: .35em .6em;
+            margin: 1em auto;
+            font-size: 1em;
+        }
 
-    #textbox {
-        height: 250px;
-        margin: 1em auto 1.5em;
-        font-size: 1.5em;
-    }
+        .about {
+            font-size: .95em;
+        }
 
-    .buttons {
-        width: 200px;
-        height: 50px;
-        font-size: 1.10em;
-        font-weight: 700;
-        text-shadow: .5px .5px 1px rgb(104, 34, 104);
-        box-shadow: 1.5px 1.5px rgb(104, 34, 104);
-    }
+        #update {
+            font-size: 1.05em;
+        }
 
-    .buttons:active {
-        text-shadow: .5px .5px 1px rgb(31, 31, 31);
-        box-shadow: 1.5px 1.5px rgb(173, 111, 173);
-    }
+        footer {
+            font-size: 1em;
+        }
 
-    #copied-notice {
-        padding: .35em .6em;
-        margin: 1em auto;
-        font-size: 1em;
+        .profile-pic {
+            width: 3.75em;
+            height: 3.75em;
+        }
     }
-
-    .about {
-        font-size: .95em;
-    }
-
-    footer {
-        font-size: 1em;
-    }
-
-    .profile-pic {
-        width: 3.75em;
-        height: 3.75em;
-    }
-}
