--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@ main {
 .buttons {
     background-color: rgb(190, 190, 190);
     color: rgb(31, 31, 31);
-    width: 100px;
+    width: 110px;
     height: 40px;
     font-size: .8em;
     font-weight: 400;
@@ -139,7 +139,7 @@ a {
 /*slight adjustment for larger phones*/
 @media only screen and (min-width: 415px) {
     .buttons {
-        width: 125px;
+        width: 135px;
     }
 
     /*tablet query*/
@@ -156,9 +156,9 @@ a {
         }
 
         .buttons {
-            width: 160px;
+            width: 210px;
             height: 45px;
-            font-size: .9em;
+            font-size: 1em;
             font-weight: 700;
             text-shadow: .5px .5px 1px rgb(104, 34, 104);
             box-shadow: 1.5px 1.5px rgb(104, 34, 104);
@@ -203,7 +203,7 @@ a {
         }
 
         #textbox {
-            height: 250px;
+            height: 260px;
             margin: 1em auto 1.5em;
             font-size: 1.5em;
         }
@@ -245,3 +245,4 @@ a {
             height: 3.75em;
         }
     }
+}
