--- a/css/styles.css
+++ b/css/styles.css
@@ -141,108 +141,124 @@ a {
     .buttons {
         width: 135px;
     }
+}
 
-    /*tablet query*/
-    @media only screen and (min-width: 768px) {
+/*adjustment for even larger phones*/
+@media only screen and (min-width: 575px) {
+    .buttons {
+        width: 150px;
+        font-size: .85em;
+    }
+}
 
-        h1 {
-            font-size: 1.75em;
-        }
+/*adjustment for much larger phones or small tablets*/
+@media only screen and (min-width: 700px) {
+    .buttons {
+        width: 165px;
+        font-size: .9em;
+    }
+}
 
-        #textbox {
-            height: 225px;
-            margin: 1em auto 1.25em;
-            font-size: 1.35em;
-        }
+/*tablet query*/
+@media only screen and (min-width: 768px) {
 
-        .buttons {
-            width: 210px;
-            height: 45px;
-            font-size: 1em;
-            font-weight: 700;
-            text-shadow: .5px .5px 1px rgb(104, 34, 104);
-            box-shadow: 1.5px 1.5px rgb(104, 34, 104);
-        }
-
-        .buttons:active {
-            text-shadow: .5px .5px 1px rgb(31, 31, 31);
-            box-shadow: 1.5px 1.5px rgb(173, 111, 173);
-        }
-
-        #copied-notice {
-            padding: .3em .55em;
-            margin: .75em auto;
-            font-size: .85em;
-        }
-
-        .about {
-            font-size: .85em;
-        }
-
-        #update {
-            font-size: .95em;
-        }
-
-        footer {
-            flex-direction: row;
-            margin-top: 1.25em;
-            font-size: .9em;
-        }
-
-        .profile-pic {
-            width: 3.5em;
-            height: 3.5em;
-        }
+    h1 {
+        font-size: 1.75em;
     }
 
-    /*desktop query*/
-    @media only screen and (min-width: 992px) {
+    #textbox {
+        height: 225px;
+        margin: 1em auto 1.25em;
+        font-size: 1.35em;
+    }
 
-        h1 {
-            font-size: 2em;
-        }
+    .buttons {
+        width: 210px;
+        height: 45px;
+        font-size: 1em;
+        font-weight: 700;
+        text-shadow: .5px .5px 1px rgb(104, 34, 104);
+        box-shadow: 1.5px 1.5px rgb(104, 34, 104);
+    }
 
-        #textbox {
-            height: 260px;
-            margin: 1em auto 1.5em;
-            font-size: 1.5em;
-        }
+    .buttons:active {
+        text-shadow: .5px .5px 1px rgb(31, 31, 31);
+        box-shadow: 1.5px 1.5px rgb(173, 111, 173);
+    }
 
-        .buttons {
-            width: 200px;
-            height: 50px;
-            font-size: 1.10em;
-            font-weight: 700;
-            text-shadow: .5px .5px 1px rgb(104, 34, 104);
-            box-shadow: 1.5px 1.5px rgb(104, 34, 104);
-        }
+    #copied-notice {
+        padding: .3em .55em;
+        margin: .75em auto;
+        font-size: .85em;
+    }
 
-        .buttons:active {
-            text-shadow: .5px .5px 1px rgb(31, 31, 31);
-            box-shadow: 1.5px 1.5px rgb(173, 111, 173);
-        }
+    .about {
+        font-size: .85em;
+    }
 
-        #copied-notice {
-            padding: .35em .6em;
-            margin: 1em auto;
-            font-size: 1em;
-        }
+    #update {
+        font-size: .95em;
+    }
 
-        .about {
-            font-size: .95em;
-        }
+    footer {
+        flex-direction: row;
+        margin-top: 1.25em;
+        font-size: .9em;
+    }
 
-        #update {
-            font-size: 1.05em;
-        }
+    .profile-pic {
+        width: 3.5em;
+        height: 3.5em;
+    }
+}
 
-        footer {
-            font-size: 1em;
-        }
+/*desktop query*/
+@media only screen and (min-width: 992px) {
 
-        .profile-pic {
-            width: 3.75em;
-            height: 3.75em;
-        }
+    h1 {
+        font-size: 2em;
+    }
+
+    #textbox {
+        height: 260px;
+        margin: 1em auto 1.5em;
+        font-size: 1.5em;
+    }
+
+    .buttons {
+        width: 200px;
+        height: 50px;
+        font-size: 1.10em;
+        font-weight: 700;
+        text-shadow: .5px .5px 1px rgb(104, 34, 104);
+        box-shadow: 1.5px 1.5px rgb(104, 34, 104);
+    }
+
+    .buttons:active {
+        text-shadow: .5px .5px 1px rgb(31, 31, 31);
+        box-shadow: 1.5px 1.5px rgb(173, 111, 173);
+    }
+
+    #copied-notice {
+        padding: .35em .6em;
+        margin: 1em auto;
+        font-size: 1em;
+    }
+
+    .about {
+        font-size: .95em;
+    }
+
+    #update {
+        font-size: 1.05em;
+    }
+
+    footer {
+        font-size: 1em;
+    }
+
+    .profile-pic {
+        width: 3.75em;
+        height: 3.75em;
     }
 }
