--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,10 @@ a {
 
 /*adjustment for even larger phones*/
 @media only screen and (min-width: 575px) {
+    h1 {
+        font-size: 1.6em;
+    }
+
     .buttons {
         width: 150px;
         font-size: .85em;
@@ -153,6 +157,11 @@ a {
 
 /*adjustment for much larger phones or small tablets*/
 @media only screen and (min-width: 700px) {
+
+    h1 {
+        font-size: 1.68em;
+    }
+
     .buttons {
         width: 165px;
         font-size: .9em;
