--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,8 @@ header {
 }
 
 h1 {
-    font-size: 1.5em;
+    font-size: 1.75em;
+    margin: 0;
     font-weight: 700;
     text-shadow: .75px .75px 1.5px rgb(104, 34, 104);
 }
@@ -109,8 +110,8 @@ main {
 }
 
 #update {
-    font-size: .85em;
     color: rgb(104, 34, 104);
+    font-size: .85em;
     text-shadow: .5px .5px 1px rgb(148, 241, 241);
 }
 
@@ -146,7 +147,7 @@ a {
 /*adjustment for even larger phones*/
 @media only screen and (min-width: 575px) {
     h1 {
-        font-size: 1.6em;
+        font-size: 1.85em;
     }
 
     .buttons {
@@ -159,7 +160,7 @@ a {
 @media only screen and (min-width: 700px) {
 
     h1 {
-        font-size: 1.68em;
+        font-size: 1.95em;
     }
 
     .buttons {
@@ -172,7 +173,8 @@ a {
 @media only screen and (min-width: 768px) {
 
     h1 {
-        font-size: 1.75em;
+        margin: .25em 0 .25em 0;
+        font-size: 2.05em;
     }
 
     #textbox {
@@ -225,7 +227,8 @@ a {
 @media only screen and (min-width: 992px) {
 
     h1 {
-        font-size: 2em;
+        margin: .5em 0 .5em 0;
+        font-size: 2.15em;
     }
 
     #textbox {
