--- a/css/styles.css
+++ b/css/styles.css
@@ -21,10 +21,10 @@ h1 {
 }
 
 .linker {
-position: absolute;
-top: 5px;
-right: 5px;
-font-size: 14px;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: 14px;
 }
 
 #erasing-r {
@@ -71,16 +71,21 @@ main {
 
 .button-area {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    gap: 5%;
+    /* gap: 5%; */
+    column-gap: 10px;
+    row-gap: 10px;
 }
 
 .buttons {
     background-color: rgb(190, 190, 190);
     color: rgb(31, 31, 31);
-    width: 110px;
+    /* width: 110px; */
+    width: 125px;
     height: 40px;
-    font-size: .8em;
+    /* font-size: .8em; */
+    font-size: .7em;
     font-weight: 400;
     text-shadow: .4px .4px .75px rgb(104, 34, 104);
     border-color: rgb(31, 31, 31);
@@ -147,7 +152,8 @@ a {
 /*slight adjustment for larger phones*/
 @media only screen and (min-width: 415px) {
     .buttons {
-        width: 135px;
+        /* width: 135px; */
+        width: 150px;
     }
 }
 
@@ -158,7 +164,8 @@ a {
     }
 
     .buttons {
-        width: 150px;
+        /* width: 150px; */
+        width: 165px;
         font-size: .85em;
     }
 }
@@ -171,7 +178,8 @@ a {
     }
 
     .buttons {
-        width: 165px;
+        /* width: 165px; */
+        width: 180px;
         font-size: .9em;
     }
 }
@@ -191,7 +199,8 @@ a {
     }
 
     .buttons {
-        width: 210px;
+        /* width: 210px; */
+        width: 225px;
         height: 45px;
         font-size: 1em;
         font-weight: 700;
@@ -245,9 +254,11 @@ a {
     }
 
     .buttons {
-        width: 200px;
+        /* width: 200px; */
+        width: 240px;
         height: 50px;
-        font-size: 1.10em;
+        /* font-size: 1.10em; */
+        font-size: 1.05em;
         font-weight: 700;
         text-shadow: .5px .5px 1px rgb(104, 34, 104);
         box-shadow: 1.5px 1.5px rgb(104, 34, 104);
