--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,11 @@ h1 {
     text-shadow: .75px .75px 1.5px rgb(104, 34, 104);
 }
 
-.title-display-languages {
+.specific-languages-title {
+    display: flex;
+}
+
+h2 {
     font-size: 1.25em;
     justify-content: end;
     margin: 0;
@@ -178,6 +182,10 @@ a {
         font-size: 1.85em;
     }
 
+    h2 {
+        font-size: 1.35em;
+    }
+
     .title-display-languages {
         font-size: 1.35em;
     }
@@ -196,6 +204,10 @@ a {
         font-size: 1.95em;
     }
 
+    h2 {
+        font-size: 1.45em;
+    }
+
     .buttons {
         /* width: 165px; */
         width: 180px;
@@ -209,6 +221,10 @@ a {
     h1 {
         margin: .25em 0 .25em 0;
         font-size: 2.05em;
+    }
+
+    h2 {
+        font-size: 1.55em;
     }
 
     .title-display-languages {
@@ -268,6 +284,10 @@ a {
     h1 {
         margin: .5em 0 .5em 0;
         font-size: 2.15em;
+    }
+
+    h2 {
+        font-size: 1.65em;
     }
 
     .title-display-languages {
