--- a/css/styles.css
+++ b/css/styles.css
@@ -219,7 +219,7 @@ a {
 @media only screen and (min-width: 768px) {
 
     h1 {
-        margin: .25em 0 .25em 0;
+        margin: .25em 0 0 0;
         font-size: 2.05em;
     }
 
@@ -282,7 +282,7 @@ a {
 @media only screen and (min-width: 992px) {
 
     h1 {
-        margin: .5em 0 .5em 0;
+        margin: .5em 0 0 0;
         font-size: 2.15em;
     }
 
